[package]
name = "allroads"
version = "2.1.0"
edition = "2024"
description = "a collaborative rust-based roadmap viewer and project management tool"
license = "MIT"

[dependencies]
eframe = "0.35"
egui = "0.35"
chrono = "0.4"
rusqlite = { version = "0.40", features = ["bundled-sqlcipher"] }
rand = "0.8"
hex = "0.4"
keyring = "4"
tokio = { version = "1.38", features = ["rt-multi-thread", "time"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
serde_cbor = "0.11"
serde_json = "1"
sync_engine = { path = "lib" }
url = "2"
chacha20poly1305 = "0.10"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 1
codegen-units = 1
strip = true
lto = true
debug = false

[package.metadata.bundle]
name = "Allroads"
identifier = "com.vertigo.allroads.app"
icon = ["icon.icns"]
version = "2.1.0"
category = "Productivity"
short_description = "roadmap planning tool"
long_description = "a rust-based roadmap viewer and project management tool"
osx_minimum_system_version = "10.14"
